updated readme and examples

--- a/notebook/3dcoulombkernerl.ipynb
+++ b/notebook/3dcoulombkernerl.ipynb
@@ -2,9 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/PolynomialQTT.jl`\n"
+     ]
+    },
+    {
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: Package PythonPlot not found in current path.\n- Run `import Pkg; Pkg.add(\"PythonPlot\")` to install the PythonPlot package.",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package PythonPlot not found in current path.\n",
+      "- Run `import Pkg; Pkg.add(\"PythonPlot\")` to install the PythonPlot package.\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] macro expansion\n",
+      "    @ ./loading.jl:2400 [inlined]\n",
+      "  [2] macro expansion\n",
+      "    @ ./lock.jl:376 [inlined]\n",
+      "  [3] __require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2383\n",
+      "  [4] require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2359\n",
+      "  [5] eval(m::Module, e::Any)\n",
+      "    @ Core ./boot.jl:489\n",
+      "  [6] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:2867\n",
+      "  [7] (::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.161.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
+      "  [8] withpath(f::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.161.1/scripts/packages/VSCodeServer/src/repl.jl:278\n",
+      "  [9] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, params::VSCodeServer.NotebookRunCellArguments, token::VSCodeServer.CancellationTokens.CancellationToken)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.161.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      " [10] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::VSCodeServer.JSONRPC.Request)\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.161.1/scripts/packages/JSONRPC/src/typed.jl:0\n",
+      " [11] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#20#21\"{String})\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.161.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
+      " [12] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.161.1/scripts/notebook/notebook.jl:28"
+     ]
+    }
+   ],
    "source": [
     "using Revise\n",
     "\n",
@@ -37,9 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `R` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `R` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/PolynomialQTT.jl/notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W1sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
    "source": [
     "plotgrid = 2:2^(R-8):2^R\n",
     "\n",
@@ -63,15 +120,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.3",
+   "display_name": "Julia 1.12.2",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.3"
+   "version": "1.12.2"
   }
  },
  "nbformat": 4,
